--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/pubsub": "^5.2.0",
-    "@google/generative-ai": "0.15.0",
+    "@google-cloud/vertexai": "^1.3.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "googleapis": "^140.0.0"
